min width fixing for mobile

--- a/src/app/matchup-overview/matchup/summary/summary.component.html
+++ b/src/app/matchup-overview/matchup/summary/summary.component.html
@@ -18,8 +18,8 @@
     [ngClass]="teamColor()"
   >
     <tr class="bg-slate-400">
-      <th></th>
-      <th class="w-12"></th>
+      <th class=""></th>
+      <th class="min-w-8 w-12"></th>
       <th
         (click)="sortByName()"
         class="w-32 cursor-pointer hover:text-slate-200"
