--- a/src/app/matchup-overview/matchup/typechart/typechart.component.html
+++ b/src/app/matchup-overview/matchup/typechart/typechart.component.html
@@ -64,7 +64,7 @@
           *ngFor="let type of types"
         >
           <img
-            class=""
+            class="min-w-6"
             src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
             alt="{{ type }}"
           />
