--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -4,10 +4,21 @@
     <h1 class="text-6xl font-semibold w-fit">Pokemon DraftZone</h1>
   </div>
   <div
-    class="w-5/6 sm:w-2/3 p-4 overflow-y-auto rounded-lg shadow bg-slate-300 h-2/3"
+    class="w-5/6 p-4 overflow-y-auto rounded-lg shadow sm:w-2/3 bg-slate-300 h-2/3"
   >
     <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
     <ul class="space-y-3">
+      <li>
+        <h2 class="text-lg font-semibold">April 1st, 2024</h2>
+        <h3>
+          Happy April Fools' Day! Significant effort has been invested in
+          enhancing stability and addressing bugs on the backend. Now, you have
+          the ability to import Pokémon from your clipboard for new drafts and
+          teams. The draft planner is nearing completion and is scheduled for
+          release in the coming weeks. Thanks everyone for the continued
+          support!
+        </h3>
+      </li>
       <li>
         <h2 class="text-lg font-semibold">March 12th, 2024</h2>
         <h3>
