--- a/src/app/planner/summary/summary.component.html
+++ b/src/app/planner/summary/summary.component.html
@@ -72,10 +72,7 @@
       <td>
         <div *ngIf="pokemon.capt" class="w-6">
           <div *ngIf="pokemon.capt.tera">
-            <img
-              src="../../../assets/icons/tera.svg"
-              title="{{ pokemon.capt.tera }}"
-            />
+            <tera [pokemon]="pokemon"></tera>
           </div>
           <div *ngIf="pokemon.capt.z">
             <img src="../../../assets/icons/z.svg" />
