--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ sprite {
     drop-shadow(-1px 0px 0 theme("colors.slate.500"))
     drop-shadow(0px -1px 0 theme("colors.slate.500"))
     drop-shadow(0px 1px 0 theme("colors.slate.500"));
+  z-index: 0;
 }
 
 @layer utilities {
