--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -1,4 +1,4 @@
-<div class="flex space-x-2">
+<div class="flex min-h-full space-x-2">
   <div
     *ngIf="draft"
     class="hidden w-1/6 p-1 border-2 max-w-28 sm:block bg-cyan-100 border-cyan-200 rounded-xl"
@@ -88,13 +88,13 @@
                 Are you sure you want to delete?
               </div>
               <div
-                class="w-1/6 m-2 justify-center items-center flex bg-red-300 shadow cursor-pointer hover:shadow shadow-red-600 rounded-xl"
+                class="flex items-center justify-center w-1/6 m-2 bg-red-300 shadow cursor-pointer hover:shadow shadow-red-600 rounded-xl"
                 (click)="deleteMatchup(matchup._id)"
               >
                 Yes
               </div>
               <div
-                class="w-1/6 m-2 justify-center items-center flex bg-red-300 shadow cursor-pointer hover:shadow shadow-red-600 rounded-xl"
+                class="flex items-center justify-center w-1/6 m-2 bg-red-300 shadow cursor-pointer hover:shadow shadow-red-600 rounded-xl"
                 (click)="matchup.deleteConfirm = false"
               >
                 No
