--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -28,7 +28,7 @@
       <button
         type="button"
         (click)="importing = true"
-        class="flex items-center justify-center w-32 px-1 my-3 h-6 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
       >
         Import
         <img class="h-full" src="../../../../assets/icons/import.svg" />
@@ -57,7 +57,7 @@
       <button
         type="button"
         (click)="importing = false"
-        class="flex items-center justify-center w-32 px-1 my-3 h-6 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+        class="flex items-center justify-center w-32 h-6 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
       >
         Cancel
       </button>
@@ -73,7 +73,8 @@
       <div class="flex justify-center w-full">
         <textarea
           #textAreaInfo
-          class="h-96 w-2/3 max-w-128 p-2 resize-none rounded"
+          autocomplete="off"
+          class="w-2/3 p-2 rounded resize-none h-96 max-w-128"
           placeholder="Deoxys&#10;Minior&#10;Clefable&#10;..."
         ></textarea>
       </div>
