--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -3,12 +3,10 @@
     <img class="w-16 h-16 mr-2" src="../../../13luken.ico" alt="logo" />
     <h1 class="text-6xl font-semibold w-fit">Pokemon DraftZone</h1>
   </div>
-  <div class="flex flex-col w-5/6 md:w-2/3 h-2/3 md:flex-row">
-    <div
-      class="grid h-full grid-cols-3 p-8 md:w-1/3 md:grid-cols-1 gap-y-8 gap-x-4"
-    >
+  <div class="flex flex-col w-5/6 md:w-2/3 h-2/3">
+    <div class="grid w-full grid-cols-1 py-2 gap-y-2 gap-x-4 md:grid-cols-3">
       <strong
-        class="flex items-center justify-center w-full overflow-y-auto text-center border rounded-lg shadow hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
+        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
         routerLink="/about"
       >
         What is Pokemon DraftZone?
@@ -16,20 +14,20 @@
       <a
         href="https://discord.gg/sQUEBW4UVx"
         target="_blank"
-        class="flex items-center justify-center w-full overflow-y-auto text-center border rounded-lg shadow hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
+        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
       >
         <strong> Join our community</strong>
       </a>
       <a
         href="https://www.buymeacoffee.com/xlumarisxu"
         target="_blank"
-        class="flex items-center justify-center w-full overflow-y-auto text-center border rounded-lg shadow hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
+        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-slate-200 hover:cursor-pointer border-slate-400 bg-slate-300"
       >
         <strong>Keep the site Ad-Free</strong>
       </a>
     </div>
     <div
-      class="h-full px-2 py-4 border rounded-lg shadow md:w-2/3 bg-slate-300 border-slate-400"
+      class="w-full h-full px-2 py-4 border shadow rounded-xl bg-slate-300 border-slate-400"
     >
       <div class="h-full px-2 overflow-y-auto">
         <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
