--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -43,7 +43,7 @@
     class="fixed inset-0 z-30 flex flex-col items-center justify-center bg-gray-800 bg-opacity-50"
   >
     <div
-      class="w-5/6 sm:w-2/3 md:w-1/2 lg:w-1/3 p-8 bg-white rounded-lg shadow-lg"
+      class="w-5/6 p-8 bg-white rounded-lg shadow-lg sm:w-2/3 md:w-1/2 lg:w-1/3"
     >
       <h1 class="text-3xl font-bold">Share your matchup</h1>
       <div class="flex items-center max-w-full mt-4">
@@ -64,6 +64,13 @@
       >
         Close
       </button>
+      <div *ngIf="matchupData" class="grid grid-cols-3">
+        <sprite
+          class="w-12 h-12"
+          *ngFor="let pokemon of matchupData.overview[0].team"
+          [pokemon]="pokemon"
+        ></sprite>
+      </div>
     </div>
   </div>
   <loading *ngIf="!matchupData"></loading>
