--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
   grid-template-columns: repeat(19, minmax(0, 1fr));
 }
 
-sprite {
+.sprite-border {
   -webkit-filter: drop-shadow(1px 0px 0 theme("colors.slate.500"))
     drop-shadow(-1px 0px 0 theme("colors.slate.500"))
     drop-shadow(0px -1px 0 theme("colors.slate.500"))
